--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -6,4 +6,8 @@
     <string name="action_settings">Settings</string>
     <string name="ble_not_supported"> BLE not supported by phone</string>
     <string name="ble_supported"> BLE supported by phone</string>
+    <string name="action_ble_scan"> Scan </string>
+
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Note: data is parsed regardless of whether it makes sense</string>
 </resources>
