--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Bluetooth Scanner</string>
+    <string name="app_name">Scanner</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="ble_not_supported"> BLE not supported by phone</string>
-    <string name="ble_supported"> BLE supported by phone</string>
-    <string name="action_ble_scan"> Scan </string>
+    <string name="ble_not_supported">BLE not supported by phone</string>
+    <string name="ble_supported">BLE supported by phone</string>
+    <string name="action_ble_scan">Scan</string>
+    <string name="action_ble_scan_stop">Stop</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Note: data is parsed regardless of whether it makes sense</string>
@@ -14,6 +15,7 @@
     <string name="flow_pick_button_new">New Log</string>
     <string name="flow_pick_button_prev_log">Previous Logs</string>
     <string name="flow_pick_button_sync">Sync</string>
+    <string name="title_activity_log_list">LogListActivity</string>
 
 
 </resources>
